# json

./: .gitignore  CMakeLists.txt  README.md  build.sh  install-dependencies.sh  install-dev-dependencies.sh
json/: CMakeLists.txt
json/example/: CMakeLists.txt  main.c
json/fuzzing/: CMakeLists.txt  README.md  fuzzing.c
json/fuzzing/inputs/: basic.json
json/include/json/: deserialize.h  serialize.h  struct-member.h  types.h
json/include/json/types/: array.h  bool.h  common.h  object.h  string.h  uint64.h
json/src/: deserialize.c  serialize.c
json/src/types/: array.c  bool.c  common.c  object.c  string.c  uint64.c
json/tests/: CMakeLists.txt
json/tests/include/: common.h  comparison-test.h
json/tests/include/test/: inside-struct-deserialization.h  integration-deserialization.h  string-deserialization.h  struct-deserialization.h  test-struct-names.h  uint64-deserialization.h  unit.h
json/tests/src/: comparison-test.c  main.c
json/tests/src/test/: inside-struct-deserialization.c  integration-deserialization.c  string-deserialization.c  struct-deserialization.c  uint64-deserialization.c  unit.c
parse-framework/: CMakeLists.txt
parse-framework/include/parse-framework/: parse.h
test-framework/: CMakeLists.txt
test-framework/include/test-framework/: expectations.h  test.h
test-framework/src/: expectations.c  test.c
test-framework/tests/: CMakeLists.txt
test-framework/tests/src/: main.c
util/: CMakeLists.txt
util/include/util/: array.h  assert.h  log.h  macros.h  maths.h  types.h
util/include/util/file/: file-status.h  read.h
util/include/util/memory/: arena.h  macros.h
util/include/util/text/: char.h  string.h
util/src/: log.c
util/src/file/: read.c
util/src/memory/: arena.c
